--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -9,6 +9,16 @@
   <body>
     <div>Style me via the external method!</div>
     <p>I would like to be styled with the internal method, please.</p>
-    <button>Inline Method</button>
+    <button
+      style="
+        background-color: orange;
+        border-top: 1px solid #DDD;
+        border-right: 1px solid #AAA;
+        border-bottom: 1px solid #AAA;
+        border-left: 1px solid #DDD;
+      "
+    >
+      Inline Method
+    </button>
   </body>
 </html>
