fix: fix styles property values
- In styles.css add font-weight and font-size to div
- In internal styles add font-size
- In inline style add font-size

--- a/foundations/01-css-methods/index.html
+++ b/foundations/01-css-methods/index.html
@@ -10,6 +10,7 @@
       p {
         background-color: green;
         color: white;
+        font-size: 18px;
       }
     </style>
   </head>
@@ -19,6 +20,7 @@
     <button
       style="
         background-color: orange;
+        font-size: 18px;
         border-top: 1px solid #DDD;
         border-right: 1px solid #AAA;
         border-bottom: 1px solid #AAA;
